Revised chap0 code

--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -22,24 +22,25 @@ Agian entzuna duzu ordenagailuek adimen artifiziala izan dezaketela edo baliteke
 2. oharra:
 Ohiko programazio-ingurune bat instalatu nahi baduzu, zoaz eranskinera.
 
-# Programazio ongurunea
+# Programazio ingurunea
 
 Interneterako konexioa duen edozein ordenagailutan sartu:
 
 https://repl.it /
 
-! [Site de replt.it] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/00.png)
+![Site de replt.it] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/00.png)
 
 Hortik, `Start coding` sakatu
-! [Start Coding replt.it] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/01.png)
+
+![Start Coding replt.it] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/01.png)
 
 Eta hautatu **Python** lengoaia:
 
-! [Python en replt.it hautaketa] (https://raw.githubusercontent.com/pxai/mucos/master/book/images/02.png)
+![Python en replt.it hautaketa] (https://raw.githubusercontent.com/pxai/mucos/master/book/images/02.png)
 
 Behin hori eginda, programazio ingurunea kargatuko da:
 
-! [Replt.it garapen-ingurunea] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/03.png)
+![Replt.it garapen-ingurunea] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/03.png)
 
 - Ezkerrean, programa idazteko editorea duzu.
 - Eskuinean, kontsola, non ikusiko duzun emaitza programa exekutatzen duzunean.
@@ -48,6 +49,7 @@ Behin hori eginda, programazio ingurunea kargatuko da:
 Repl.it. gunean izen ematea gomendatzen dizugu. Horrela, egiten dituzun programa guztiak gordeta eta lokalizatuta izango dituzu.
 
 Online aukerak:
+
 - https://paiza.io/es
 - https://www.programiz.com/python-programming/online-compiler /
 
@@ -133,7 +135,7 @@ izena = "Ada"
 "Ada" balioa duen aldagai bat sortu berri dugu. "Ada" datu bat da, eta testu motakoa da. Orain, aldagai horren balioa bistara dezakegu pantailan:
 
 ```python
-print (izena)
+print(izena)
 ```
 
 Emaitza pantailan:
@@ -187,10 +189,10 @@ Sortu bi aldagai izen eta adina, eta erakutsi haien balioa pantailan.
 ```python
 izena = "Ada"
 adina = 14
-print ("Zure izena da", izena, "duzu", adina, "urteak")
+print ("Zure izena", izena, "da", adina, "urte dituzu")
 
 #Alternatiba:
-#print ("Zure izena % s da, % d urte dituzu" % (izena, adina)
+#print ("Zure izena % s da, % d urte dituzu" % (izena, adina))
 ```
 
 Emaitza:
@@ -207,7 +209,7 @@ Aldagai bat baino gehiago erakusteko beste modu bat mezu bat da. Aurretik, "f" l
 izena = "Bug"
 adina = 10
 print (f"Kaixo, {izena} dut izena")
-print (f"{izena} naiz {adina} urte ditut")
+print (f"{izena} naiz, {adina} urte ditut")
 ```
 
 Emaitza pantailan:
@@ -284,7 +286,7 @@ prezioa = 242.9943
 0 zenbaki txikiagoak marratxo batekin adierazten dira: -4, -5, -3.1415,...
 
 ```python
-oharra = -5
+nota = -5
 tenperaturaMarten = -50.676
 ```
 
@@ -339,10 +341,10 @@ Izena Abizena Adina
 
 Beste karaktere berezi batzuk:
 
--\\ Testu batean kontrabarra erakusteko.
--\" Komatxo bikoitza erakusteko testu batean.
--\' Komatxo sinple bat erakusteko testu batean.
--\a Pitidoa jotzeko.
+-`\\` Testu batean kontrabarra erakusteko.
+-`\"` Komatxo bikoitza erakusteko testu batean.
+-`\'` Komatxo sinple bat erakusteko testu batean.
+-`\a` Pitidoa jotzeko.
 
 ## Boolearrak
 
@@ -365,8 +367,8 @@ lagunak = ["Ada", "Miranda", "Ruby"]
 Edozein motatakoak izan daitezke, baina normalena da zerrenda bateko elementu guztiak mota berekoak izatea:
 
 ```python
-etsaiak = []
-[12, 16, 30, 0, 22, 1, 1, 12]
+hutsa = []
+zenbakiak = [12, 16, 30, 0, 22, 1, 1, 12]
 egiak = [True, False, False, True]
 ```
 
@@ -393,13 +395,13 @@ Arraroa dirudien arren, programetan batzuetan hutsa edo ezereza irudikatzen duen
 Badago hitz bat Python-en hutsa irudikatzeko aukera ematen diguna, eta hori da:
 
 ```python
-Hasierako balioa = None
-dato = None
+hasierakoBalioa = None
+datua = None
 ```
 
 Egia esan, ez da aldagaiak sortzeko erabiltzen. `None` balio bat adierazten du egoera berezietan. Adibidez, informazioa fitxategi bat edo erabiltzaileak ematen ez digun datu bat ez dagoen leku batetik atera nahi badugu.
 
-0.2 ariketa
+0.2 Ariketa
 
 Idatzi hemen ikusitako mota bakoitzaren aldagai bat definituko duen programa bat, eta kontsola bidez erakutsi:
 
@@ -455,10 +457,10 @@ Erabiltzaileak "Rosa" idazten badu, honela ikusiko da:
 
 ```console
 Esadazu zure izena: Rosa
-Kaixo, Rosa.
+Kaixo, zer moduz zaude  Rosa
 ```
 
-0.3 ariketa
+0.3 Ariketa
 
 Idatzi erabiltzaileari izen bat eskatu eta aldagai batean gordeko duen programa bat. Jarraian, kontsola bidezko agurra egin behar duzu.
 
@@ -474,7 +476,7 @@ Emaitza:
 
 ```console
 Sartu zure izena: Juan
-Kaixo, zer moduz zaude Juan?
+Kaixo, zer moduz zaude Juan
 ```
 
 ## Kontuz datuekin
@@ -501,7 +503,7 @@ Hori saihesteko, beste funtzio bat erabili behar dugu datu hori zenbaki oso bihu
 ```python
 balioa = input ("Eman zenbaki bat:")
 bikoitza = int(balioa) + int(balioa)
-print (bikoitza)
+print(bikoitza)
 ```
 
 Edo lehenago ere bihur dezakegu:
@@ -510,7 +512,7 @@ Edo lehenago ere bihur dezakegu:
 balioa = input ("Eman zenbaki bat:")
 balioa = int(balioa)
 bikoitza = balioa + balioa
-print (bikoitza)
+print(bikoitza)
 ```
 
 Edo, are gehiago, input egiten den bitartean:
@@ -518,17 +520,17 @@ Edo, are gehiago, input egiten den bitartean:
 ```python
 balioa = int(input("Emaidazu zenbaki bat:")
 bikoitza = balioa + balioa
-print (bikoitza)
+print(bikoitza)
 ```
 
 Orain bai:
 
 ```console
-Emaidazu zenbaki bat: 4
+Eman zenbaki bat: 4
 8
 ```
 
-0.4 ariketa
+0.4 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat eta gehitu 10. Jarraian, kontsola bidez erakutsi behar duzu emaitza. Gogoratu sartutako balioa zenbaki oso bihurtzeko sartzea komeni dela.
 
@@ -556,10 +558,10 @@ balioa = 66
 testua = "Nire adina da" + balioa
 ```
 
-Errorea hau izango litzateke:
+Errorea horrelako zerbait izango litzateke:
 
 ```console
-TypeError: cannot concatenate 'str' and 'int' objects
+TypeError: can only concatenate str (not "int") to str
 ```
 
 Hori saihesteko, testu mota behartu behar dugu `str ()` erabiliz:
@@ -603,10 +605,10 @@ Adibidez, egun batek zenbat segundo dituen kalkulatzeko:
 
 ```python
 minutuak = 60
-segundoak = 60
+segunduak = 60
 orduak = 24
 
-Segundoak = segundoak * minutuak * orduak
+segunduak = segunduak * minutuak * orduak
 ```
 
 Behar bezain eragiketa konplexuak egin ditzakezu. Irakurtzeko errazagoak izan daitezen, parentesiak erabil daitezke, matematikan egiten den bezala:
@@ -615,10 +617,11 @@ Behar bezain eragiketa konplexuak egin ditzakezu. Irakurtzeko errazagoak izan da
 ada = 14
 bug = 10
 neko = 2
-batez bestekoa = (ada + bug + neko)/3
+batezbestekoa = (ada + bug + neko)/3
+print(batezbestekoa)
 ```
 
-0.5 ariketa
+0.5 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta 5 kentzen dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
@@ -645,7 +648,7 @@ balioa = 8
 emaitza = balioa % 3
 ```
 
-Emaitza-balioa hauxe izango da:
+Emaitza hauxe izango da:
 
 ```console
 2
@@ -656,7 +659,7 @@ Berreketa zenbaki bat bere kabuz hainbat aldiz biderkatzearen emaitza da. Python
 
 ```python
 balioa = 2
-emaitza = balioa** 3 #honen baliokidea da: 2* 2* 2
+emaitza = balioa ** 3 #honen baliokidea da: 2 * 2 * 2
 ```
 
 Emaitza `8` izango litzateke.
@@ -707,12 +710,12 @@ Gauza bera egin daiteke operadore guztiekin:
 | a = a** 1 | | a** = 1 |
 
 
-0.6 ariketa
+0.6 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta inkrementatu (+1) egingo duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza. Ondoren, balioa dekrementatu (-1) behar du eta emaitza kontsola bidez erakutsi. Operadore laburtuak erabili!
 
 ```python
-balioa = input("Sartu zenbaki bat: ")
+balioa = int(input("Sartu zenbaki bat: "))
 balioa += 1
 
 print("Inkrementua da", balioa)
@@ -769,7 +772,7 @@ emaitza = "Ada" < "Bug"
 
 Emaitza hauxe izango litzateke: `True`.
 
-0.7 ariketa
+0.7 Ariketa
 
 Idatzi erabiltzaileari bi zenbaki eskatzen dizkion programa bat. Gero, bere desberdintasuna alderatu behar du eta emaitza kontsolaren bidez erakutsi behar du.
 
@@ -787,7 +790,7 @@ Emaitza:
 ```console
 Sartu zenbaki bat: 42
 Sartu beste zenbaki bat: 42
-Desberdinak dira? Falsea
+Desberdinak dira? False
 ```
 
 ## Eragile boolearrak
@@ -813,7 +816,7 @@ Aukera guztiak laburbiltzeko, **egiaren taula** delakoa honako hau izango litzat
 | `Leharetxea | `Danera | `Faialdea | `Falseere |
 | `Erresuma | `Txurruna | `Trueu | `Trueu |
 
-0.8 ariketa
+0.8 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, lehenengoa 0 baino handiagoa den eta, gainera, bikoitia den alderatu behar duzu.
 
@@ -829,7 +832,7 @@ Emaitza:
 
 ```console
 Sartu zenbaki bat: 14
-Parea eta positiboa da? True
+Bikoitza eta positiboa da? True
 ```
 
 ## or
@@ -852,7 +855,7 @@ Aukera guztiak laburbiltzeko, hauxe izango litzateke `or` operadorearen egiaren 
 | `Errueu | `Orduera | `Faialdea | `Trueu |
 | `Erresuma | `Ordua | `Txurruna | `Trueu |
 
-0.9 ariketa
+0.9 Ariketa
 
 Idatzi programa bat erabiltzaileari bi zenbaki eskatzeko eta bietako bat positiboa den egiaztatzeko. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
@@ -869,7 +872,7 @@ Emaitza:
 ```console
 Sartu zenbaki bat: -4
 Sartu beste zenbaki bat: 6
-Bietako bat positiboa da? True
+Zenbaki batek ala besteek positiboa dute? True
 ```
 
 ## not
@@ -878,7 +881,7 @@ Operadore horrek kontrako balioa itzultzen du eragiketan. `True` balio bati apli
 
 ```python
 balioa = True
-emaitza = not balioa;
+emaitza = not balioa
 ```
 
 Emaitza hau izango litzateke: `False`.
@@ -906,7 +909,7 @@ Emaitza:
 
 ```console
 Sartu zenbaki bat: -4
-Ez al da bikoitia eta positiboa? True
+Bikoitia eta positiboa da? True
 ```
 
 ## Operadoreak nahasten
@@ -914,16 +917,17 @@ Ez al da bikoitia eta positiboa? True
 Operadoreak behar adina konbina ditzakegu:
 
 ```python
-erretiratua = 65
-if adina > 17 and adina < (erretiratua + 1):
-print ("Lan egin dezakezu")
+jubilazioAdina = 65
+adina = 42
+if adina > 17 and adina < (jubilazioAdina + 1):
+  print ("Lan egin dezakezu")
 ```
 
 Oro har, baldintzapeko eragileak baldintzapeko blokeen, begizten eta abarren baldintzen barruan erabiltzen dira.
 
 ## Proposatutako ariketak
 
-0.0 ariketa
+0.0 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta 7 biderkatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
@@ -938,10 +942,10 @@ Emaitza:
 
 ```console
 Sartu zenbaki bat: 3
-Biderketa hau da: 21
+Biderketa honakoa da: 21
 ```
 
-0.1 ariketa
+0.1 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta bitan zatikatuko duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
@@ -954,11 +958,11 @@ print ("Zatiketa da:", emaitza)
 Emaitza:
 
 ```console
-Sartu zenbaki bat: 60
-Banaketa hau da: 30
+Sartu zenbaki bat:60
+Zatiketa da: 30.0
 ```
 
-0.2 ariketa
+0.2 Ariketa
 Idatzi erabiltzaileari zenbaki bat eskatu eta . modulua egiten duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
@@ -972,10 +976,10 @@ Emaitza:
 
 ```console
 Sartu zenbaki bat: 7
-Modulua hau da: 1
+Modulua honako hau da: 1
 ```
 
-0.3 ariketa
+0.3 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta ber 2 (2ko esponentziala) aplikatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
@@ -990,10 +994,10 @@ Emaitza:
 
 ```console
 Sartu zenbaki bat: 4
-Esponentziala hau da: 16
+Esponentzialaren emaitza: 16
 ```
 
-0.4 ariketa
+0.4 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta 5 kentzen dion programa bat. Jarraian, zeinua aldatu behar diozu eta emaitza kontsolarekin erakutsi.
 
@@ -1002,17 +1006,17 @@ balioa = input("Sartu zenbakia: ")
 kenketa = int(balioa) - 5
 emaitza = -kenketa
 
-print("Kenketa azkena da:", emaitza)
+print("Kenketa da:", emaitza)
 ```
 
 Emaitza:
 
 ```console
-Sartu zenbaki bat: 4
-Hau da azken kenketa: 1
+Sartu zenbakia: 4
+Kenketa da: 1
 ```
 
-0.5 ariketa
+0.5 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, % 2 eragiketa 0ren berdina den egiaztatu behar duzu, eta emaitza erakutsi. Zenbaki bat 2rekin zatitzen bada eta kenketa 0 bada, zenbaki hori bikoitia dela esan nahi du.
 
@@ -1022,7 +1026,7 @@ moduloa = int(balioa) % 2
 
 emaitza = moduloa == 0
 
-print("Balioa bikoitia al da?", emaitza)
+print("Balioa bikoitia da?", emaitza)
 ```
 
 Emaitza
@@ -1032,7 +1036,7 @@ Sartu zenbaki bat: 8
 Balioa bikoitia da? True
 ```
 
-0.6 ariketa
+0.6 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, zenbaki hori 0 edo handiagoa den egiaztatu behar duzu, hau da, positiboa den.
 
@@ -1051,7 +1055,7 @@ Sartu zenbaki bat: 6
 Positiboa da? True
 ```
 
-0.7 ariketa
+0.7 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, lehenengoa 0 baino txikiagoa den alderatu behar duzu, eta emaitza kontsolaren bidez erakutsi. Zenbakia negatiboa den antzematen ariko ginateke.
 
