--- a/book_eu/05.md
+++ b/book_eu/05.md
@@ -1,4 +1,4 @@
-# Motak
+# Klaseak
 
 Klaseek objektuei zuzendutako programazioa izeneko teknika aplikatzeko aukera ematen digute. Arazo konplexuak konpontzeko beste estrategia bat da.
 Funtzioekin, arazo bat arazo txikietan banatzen dugu. Aldiz, objektuetara zuzendutako programazioarekin, arazoa klasetan banatzen saiatzen gara. Baina nola? Arazoaren zati den guztia irudikatuz, klaseak erabiliz. Hots, arazoan existitzen diren gauzak objektuak bilakatuz.
