--- a/book_eu/01.md
+++ b/book_eu/01.md
@@ -73,7 +73,7 @@ if int(balioa) < 0:
 Emaitza:
 
 ```console
-Idatz ezazu zenbaki bat: -5
+Idatzi zenbaki bat: -5
 Negatiboa da
 ```
 
@@ -128,7 +128,7 @@ else:
 Emaitza:
 
 ```console
-Idatzi testu bat: ez dakit
+Sartu testua: ez dakit
 Ez dut ulertzen.
 ```
 
@@ -153,9 +153,9 @@ Demagun hizkuntza desberdinetan agurtzeko gai den programa bat nahi dugula. Hone
 hizkuntza = input ("Zer hizkuntzan hitz egiten duzu?")
 
 if hizkuntza == "Espainera":
-    print ("Kaixo"):
+    print ("Kaixo")
 elif hizkuntza == "Ingelera":
-    print ("Hello"):
+    print ("Hello")
 elif hizkuntza == "Frantsesa":
     print ("Salut")
 else:
@@ -194,8 +194,8 @@ Arratsalde on.
 Sortu programa bat erabiltzaileari bi balio oso eskatzeko, alderatzeko eta pantaila bidez erakusteko bat bestea baino handiagoa den edo berdinak diren.
 
 ```python
-balio1 = input("Sartu zenbaki bat: ")
-balio2 = input("Sartu beste zenbaki bat: ")
+balio1 = int(input("Sartu zenbaki bat: "))
+balio2 = int(input("Sartu beste zenbaki bat: "))
 
 if balio1 > balio2:
     print(balio1, " ", balio2, " baino handiagoa da")
@@ -225,9 +225,9 @@ balio2 = input("Sartu beste zenbaki bat: ")
 ondarra = int(balio1) % int(balio2)
 
 if ondarra == 0:
-  print(balio1, " zenbakia ", balio2, " zenbakiaren bikoitza da.")
+  print(balio1, " zenbakia ", balio2, " zenbakiaren multiploa da.")
 else:
-  print(balio1, " zenbakia ", balio2, " zenbakirik ez da bikoitza.")
+  print(balio1, " zenbakia ez da ", balio2, " zenbakiaren multiploa.")
 ```
 
 Emaitza:
@@ -235,10 +235,10 @@ Emaitza:
 ```console
 Sartu zenbaki bat: 40
 Sartu beste zenbaki bat: 4
-40 4ren multiploa da
+40  zenbakia  4  zenbakiaren multiploa da.
 ```
 
-1.1 ariketa
+1.1 Ariketa
 
 Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta ondorengoa egin: lehenik eta behin pantailan erakutsi behar du zenbakia negatiboa edo positiboa den. Gero, zenbakia positiboa bada, negatibo bihurtu behar du, eta negatiboa bada, positibo.
 
@@ -303,7 +303,7 @@ Emaitza:
 
 ```console
 Sartu urteko hilabete bat: Ekaina
-30 egun
+30 egun ditu
 ```
 
 Hobespena: saiatu programa motzago egiten `or` operadorerik erabiliz.
@@ -333,13 +333,13 @@ Sartu zenbaki bat: -9
 - 9 bakoitia eta negatiboa da
 ```
 
-1.4 ariketa
+1.4 Ariketa
 
 Sortu programa bat erabiltzaileari kilotan duen pisua eta zentimetrotan duen altuera eskatzeko eta GMI kalkulatzeko (pisua/(altuera ber 2)); emaitza erakutsi behar du eta gero mezu bat erakutsi:
 
 - GMI 16 baino txikiagoa bada, "Beharrezkoa da gehiago jatea" mezua agertuko da.
 - GMI (> =) 16 eta 25 (<) artean badago, "Ondo zaude" mezua agertuko da.
-- GMI 25 eta 30 artean badago (<), mezua agertuko da: "Gorputz gordinagoa duzu".
+- GMI 25 eta 30 artean badago (<), mezua agertuko da: "Gorputz gordina duzu".
 - GMI 30 baino handiagoa bada, mezu hau agertuko da: "Obesitate arazoa duzu".
 
 ```python
@@ -351,14 +351,14 @@ altuera = int(altuera)
 emaitza = pisua / (altuera * altuera)
 
 gmi = (emaitza * 10000)
-print("Zure gmi: ", imcRedondeado)
+print("Zure gmi: ", gmi)
 
 if gmi < 16 :
-  print("Beharrezkoa da gehiago jan")
+  print("Beharrezkoa da gehiago jatea")
 elif gmi >= 16 and gmi < 25:
-  print("Ongi zaude")
+  print("Ondo zaude")
 elif gmi >= 25 and gmi < 30:
-  print("Gorputz gordinagoa duzu")
+  print("Gorputz gordina duzu")
 else:
   print("Obesitate arazoa daukazu")
 ```
@@ -372,7 +372,7 @@ Zure gmi: 23.66143861546782
 Ondo zaude
 ```
 
-1.5 ariketa
+1.5 Ariketa
 
 Sortu erabiltzaileari jokalari dortsal bat eskatzen dion programa bat eta ondorengoa egin: egiaztatu zenbaki hori 0 eta 99 artean dagoela. Ez badago, programa errore mezu batekin amaitu behar da. Zenbakia 0 eta 99 artekoa bada, programak testu bat erakutsi behar du dortsal bakoitzari dagokion posizioarekin:
 
