--- a/book_eu/03.md
+++ b/book_eu/03.md
@@ -64,13 +64,13 @@ for zenbakia in zenbakiak:
 
 batazbestekoa = batuketa / len(zenbakiak)
 
-print("Batazbestekoa da: ", media)
+print("Batazbestekoa da: ", batazbestekoa)
 ```
 
 Emaitza:
 
 ```console
-Batez bestekoa: 5.06000000000005
+Batazbestekoa da:  5.0600000000000005
 ```
 
 ## Zerrendatik zatiak atera
@@ -87,21 +87,21 @@ Lehen elementuak ere atera daitezke:
 
 ```python
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
-zenbakiak[: 6] # [1, 2, 3, 4, 5, 6] zenbakiak
+zenbakiak[: 6] # [1, 2, 3, 4, 5, 6]
 ```
 
 Edo azken balioak
 
 ```python
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
-zenbakiak[-4:] # [6, 7, 8, 9] zenbakiak
+zenbakiak[-4:] # [6, 7, 8, 9] =
 ```
 
 Edo, besterik gabe, azkena:
 
 ```python
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
-zenbakiak[-1] zenbakiak # [9]
+zenbakiak[-1]  # [9]
 ```
 
 ## Elementuak gehitu eta ezabatu
@@ -110,7 +110,7 @@ Zerrenda bati elementu bat gehitu nahi badiogu, nahikoa da funtzio hau erabiltze
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
-idiomas.append ("Italiera")
+hizkuntzak.append ("Italiera")
 print (hizkuntzak) # ["Ingelesa", "Gaztelania", "Frantsesa", "Italiera"]
 ```
 
@@ -118,7 +118,7 @@ Eta elementu bat zerrendatik kendu nahi badugu, `del` agindua erabil daiteke:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
-del hizkuntza[1]
+del hizkuntzak[1]
 print (hizkuntzak) # ["Ingelesa", "Frantsesa"]
 ```
 
@@ -135,7 +135,7 @@ Eta zerrendako elementu baten balioa ere alda daiteke:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
-hizkuntzak [2] = "Italiera"
+hizkuntzak[2] = "Italiera"
 ```
 
 Eta gogoratu, zerrendan zehar joateko, begizta hau erabil dezakegu:
@@ -193,7 +193,7 @@ Adibidez, hiztegi bat defini dezakegu, hainbat pertsonaren adinak biltzen dituen
 
 ```python
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
-print (adinak ["Ada"]) # 14
+print(adinak ["Ada"]) # 14
 ```
 
 Hiztegia honela adieraz daiteke:
@@ -219,9 +219,9 @@ for izena in telefonoak.keys():
 Emaitza:
 
 ```console
-{Bug: 111000111, 'Ada': 666555333}
+{'Ada': 666555333, 'Bug': 111000111}
+Ada 666555333
 Bug 111000111
-Ada 66555333
 ```
 
 Elementu berriak gehitzeko, balio berri bat esleitu daiteke. Ezabatzeko, `del` agindua erabiltzen da:
@@ -229,17 +229,17 @@ Elementu berriak gehitzeko, balio berri bat esleitu daiteke. Ezabatzeko, `del` a
 ```python
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
 
-print (adinak) # {'Bug': 10, 'Neko': 2, 'Ada': 14}
+print (adinak) # {'Ada': 14, 'Bug': 10, 'Neko': 2}
 
 adinak ["Miranda"] = 23;
 
-print (adinak) # {'Bug': 10, 'Neko': 2, 'Ada': 14, 'Miranda': 23}
+print (adinak) # {'Ada': 14, 'Bug': 10, 'Neko': 2, 'Miranda': 23}
 
 del adinak["Bug"]
 
-print (adinak) # {'Neko': 2, 'Ada': 14, 'Miranda': 23}
+print (adinak) # {'Ada': 14, 'Neko': 2, 'Miranda': 23}
 
-for izena in edades.keys ():
+for izena in adinak.keys ():
   print (izena, adinak[izena])
 ```
 
@@ -267,18 +267,18 @@ Emaitza:
 ```console
 Sartu izen bat: Neko
 Sartu zenbaki bat: 333222000
-Ada 66555333
-Neko 333222000
+Ada 666555333
 Bug 111000111
+Neko 333222000
 ```
 
 Hiztegiko balioak ezabatu ditzakegu, honako funtzio honekin:
 
 ```python
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
-print (adinak) # {'Bug': 10, 'Neko': 2, 'Ada': 14}
+print (adinak) # {'Ada': 14, 'Bug': 10, 'Neko': 2}
 del adinak["Bug"]
-print (adinak) # {'Neko': 2, 'Ada': 14}
+print (adinak) # {'Ada': 14, 'Neko': 2}
 ```
 
 Eta hiztegiko balio guztiak ezagutu nahi baditugu?
@@ -286,7 +286,7 @@ Ez dago arazorik, baina hiztegiaren gako guztiak itzuliko dizkigun funtzio bat e
 
 ```python
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
-for izena in edades.keys ():
+for izena in adinak.keys ():
   print (izena, adinak [izena])
 ```
 
@@ -338,9 +338,9 @@ Eta hainbat lagun izango dituen datu egitura bat izan nahi baduzu? Kasu horretan
 
 ```python
 lagunak = [
-{"izena": "Neko", "adina": 2},
-{"izena": "Bug", "adina": 10},
-{"izena": "Ada", "adina": 14}
+    {"izena": "Neko", "adina": 2},
+    {"izena": "Bug", "adina": 10},
+    {"izena": "Ada", "adina": 14}
 ]
 print (lagunak [1]) # {"izena": "Bug", "adina": 10}
 print (lagunak [2] ["izena"]) #Ada
@@ -370,7 +370,7 @@ bezeroak = [
 ]
 
 for bezeroa in bezeroak:
-    print(f"{bezeroak['izena']} {bezeroak['adina']}")
+    print(f"{bezeroa['izena']} {bezeroa['adina']}")
 ```
 
 Emaitza:
@@ -385,9 +385,9 @@ Eta joko baten egoera, pertsonaiak eta objektuak bilduko dituen datu-egitura bat
 
 ```python
 pantaila = {
-"Mario": {"bizitza": 10, "objektuak": ["perretxikoa", "izarra"]},
-"Luigi": {"bizitza": 7, "objektuak": []},
-"Toad": {"bizitza": 15, "objektuak": [perretxiko "]},
+    "Mario": {"bizitza": 10, "objektuak": ["perretxikoa", "izarra"]},
+    "Luigi": {"bizitza": 7, "objektuak": []},
+    "Toad": {"bizitza": 15, "objektuak": ["perretxiko"]},
 }
 
 print (pantaila ["Luigi"] ["bizitza"]) # 7
@@ -406,7 +406,7 @@ Izan ere, ordenagailuarentzat, testu bat zerrenda bat bezalakoa da. Letra zerren
 
 ```python
 testua = "Kaixo naiz Ada"
-testua [1] # "o"
+testua[1] # "a"
 ```
 
 Testua zerrenda bat balitz bezala ere ibil dezakegu:
@@ -414,7 +414,7 @@ Testua zerrenda bat balitz bezala ere ibil dezakegu:
 ```python
 testua = "Ada"
 
-for caracter in texto:
+for karaktere in testua:
     print (karaktere)
 ```
 
@@ -445,14 +445,14 @@ Lehen karaktereak ere atera daitezke
 
 ```python
 testua = "Python gora"
-testua [:6] # "Python"
+testua[:6] # "Python"
 ```
 
 Edo azken karaktereak
 
 ```python
 testua = "Python gora"
-testua [-4:] # "gora"
+testua[-4:] # "gora"
 ```
 
 Edo, besterik gabe, azkena:
@@ -468,15 +468,15 @@ Zenbait funtzio ditugu testua letra larriz edo xehez idazteko:
 
 ```python
 testua = "Irakasle Ada"
-testu.upper() #IRAKASLE ADA
-testu.lower() #Irakasle Ada
+testua.upper() #IRAKASLE ADA
+testua.lower() #Irakasle Ada
 ```
 
 `title()` izeneko funtzio bat ere badugu, hitz bakoitza testu baten barruan aldatzen duena, lehen letra larriz jarriz.
 
 ```python
 testua = "hau esaldi bat da"
-texto.title () #Hau Esaldi bat da
+texto.title() #Hau Esaldi bat da
 ```
 
 ## split: testutik zerrendara
@@ -485,14 +485,14 @@ texto.title () #Hau Esaldi bat da
 
 ```python
 testua = "zatoz nirekin, bizi nahi baduzu"
-hitzak = testua.split () # ["zatoz", "nirekin", "bai", "nahi duzu", "bizi"]
+hitzak = testua.split() # ["zatoz", "nirekin", "bai", "nahi duzu", "bizi"]
 ```
 
 Besterik ezean, `split` operazioa testuaren hutsuneetan mozten da. Baina beste edozein bereizle adieraz daiteke, adibidez:
 
 ```python
 testua = "Ada; Neko; Bug"
-izenak = testua.split (";") # [Ada "," Neko "," Bug "]
+izenak = testua.split(";") # [Ada "," Neko "," Bug "]
 ```
 
 ## Bilaketak
@@ -501,9 +501,9 @@ Batzuetan, testu baten barruan hitz bat bilatu behar dugu. Horretarako, `find` f
 
 ```python
 hitzak = "Irakaslerik onena Ada da, zalantzarik gabe"
-aurkitu = hitza.find ("hobeto") # 3
-aurkitu = hitza.find ("Ada") # 22
-EzAurkitua = hitza.find ("xxx") # -1
+aurkitu = hitzak.find ("hobeto") # 3
+aurkitu = hitzak.find ("Ada") # 22
+EzAurkitua = hitzak.find ("xxx") # -1
 ```
 
 Testu bat nolabait hasten den jakin nahi badugu, `startswith()` erabil daiteke.
@@ -518,8 +518,8 @@ Testu bat modu batean amaitzen den jakin nahi badugu, berriz, `endswith()` erabi
 
 ```python
 hitzak = "Python lengoaia ona da"
-acaba = palabra .endswith ("aje") #True
-acaba = palabra .startswith ("ajes") #False
+acaba = hitzak .endswith ("da") #True
+acaba = hitzak .startswith ("da") #False
 ```
 
 ## Soberakinak ezabatu
@@ -623,13 +623,14 @@ while aukera != "4":
     print("4. Irten.")
     aukera = input("Sartu aukera: ")
 
-    if "1":
-        zenbakiak.append(0)
-    elif "2":
+    if aukera == "1":
+        berria = int(input("Sartu zenbakia: "))
+        zenbakiak.append(berria)
+    elif aukera == "2":
         zenbakiak.pop()
-    elif "3":
+    elif aukera == "3":
         print(zenbakiak)
-    elif "4":
+    elif aukera == "4":
         print("Agurra")
     else:
         print("Aukera ezezaguna")
@@ -671,10 +672,10 @@ Idatzi hitz bat: Kaixo
 Idatzi hitz bat: zer
 Idatzi hitz bat: moduz?
 Idatzi hitz bat:.
-Kaixo, zer moduz?
+Kaixo, zer moduz? .
 ```
 
-3.4 ariketa
+3.4 Ariketa
 
 Idatzi programa bat erabiltzaileari bere izena, jaioterria eta jaioturtea eskatzeko. Ondoren, esaldi bat erakutsi behar duzu informazio guztiarekin, interpolazioa edo kate txantiloiak erabiliz.
 
@@ -683,7 +684,7 @@ izen = input("Idatzi zure izena: ")
 jaiotegia = input("Idatzi jaiotze lekua: ")
 urtea = input("Idatzi jaiotze urtea: ")
 
-mezua = f"{izen} izena duzu, {jaiotegia}n jaio zinen {urtea} urtean"
+mezua = f"{izen} duzu zinen, {jaiotegia}n jaio zinen {urtea} urtean."
 
 print(mezua)
 ```
@@ -694,7 +695,7 @@ Emaitza:
 Idatzi zure izena: Ada
 Idatzi zure jaioterria: Teverga
 Idatzi zure jaioturtea: 2006
-Ada duzu izena, Tevergan jaio zinen 2006an.
+Ada duzu izena, Tevergan jaio zinen 2006 urtean.
 ```
 
 3.5 Ariketa
@@ -721,8 +722,8 @@ Emaitza:
 
 ```console
 Idatzi esaldi bat: Zein ona den Ada andereñoa
-Idatzi esaldi horretako hitz bat: ona
-Zein ONA den profa Ada andereñoa
+Idatzi esalditik hitz bat: ona
+Zein ONA den Ada andereñoa
 ```
 
 3.6 Ariketa
@@ -744,7 +745,7 @@ for i in range(len(izenak)):
 Emaitza:
 
 ```console
-Frodoa
+Frodo
 Merrin
 Sam
 Pip
@@ -775,7 +776,17 @@ for zenbakia in zenbakiak:
 Emaitza:
 
 ```console
-[4, 6, -3, 3, 2, 5, 1, 7, 10, 9, 4]
+3
+5
+-4
+2
+1
+4
+0
+6
+9
+8
+3
 ```
 
 3.8 Ariketa
@@ -805,7 +816,7 @@ else:
 Emaitza:
 
 ```console
-Zenbaki errepikatua dago
+Zenbaki bat errepikatuta dago
 ```
 
 3.9 Ariketa
