--- a/book_eu/02.md
+++ b/book_eu/02.md
@@ -50,11 +50,11 @@ while kontagailua < 5:
 Emaitza:
 
 ```console
-Begiztaren barruan nago
-Begiztaren barruan nago
-Begiztaren barruan nago
-Begiztaren barruan nago
-Begiztaren barruan nago
+Begizta barruan nago
+Begizta barruan nago
+Begizta barruan nago
+Begizta barruan nago
+Begizta barruan nago
 ```
 
 Ikus dezagun beste adibide bat. Hurrengo programak datu bat eskatzen dio erabiltzaileari begizta batean. Programa ez da begiztatik aterako erabiltzaileak datu hutsa sartzen duen bitartean:
@@ -87,7 +87,7 @@ Emaitza:
 
 ```console
 Sartu minimo bat: 3
-Sartu maximo: 8
+Sartu maximo bat: 8
 3
 4
 5
@@ -156,10 +156,10 @@ Emaitza:
 
 ```console
 Sartu zenbaki bat: 3
-0 x 3 = 0
-1 x 3 = 3
-2 x 3 = 6
-...
+3 x 0 = 0
+3 x 1 = 3
+3 x 2 = 6
+...etab.
 ```
 
 2.3 Ariketa
@@ -282,7 +282,7 @@ Begizta bereziki erabilgarriak dira zerrenda bateko elementu guztiak aztertu nah
 ```python
 objektuak = ["izarra", "perretxikoa", "lorea"]
 for objektua in objektuak:
-  print (objektuak)
+  print (objektua)
 ```
 
 Begiztaren buelta bakoitzean, `objektu` aldagaiak balio bat hartuko du `objektuak` izeneko zerrendatik, eta, beraz, emaitza hau izango da:
@@ -300,10 +300,10 @@ Batzuetan, baliteke begizta batetik irten eta beste ezer prozesatzen ez jarraitz
 ```python
 izenak = ["Mia", "Jon", "Arya", "Ane", "Bug", "Ada", "Lisp"]
 for izena in izenak:
-  if izena = = "Ane":
+  if izena == "Ane":
     print ("Ane zerrendan dago")
 ```
-Programa horren arazoa da, nahiz eta `Anee` aurkitu, begiztak zerrendaren amaierara arte jarraituko duela. Zerrenda hori oso handia bada, gure programa ez da eraginkorra izango! Hau da, denbora galtzen ibiliko da. Hasieran esan bezala, ordenagailuak oso tentelak dira. Gelditzeko esaten ez badiegu, aurrera jarraituko dute.
+Programa horren arazoa da, nahiz eta `Ane` aurkitu, begiztak zerrendaren amaierara arte jarraituko duela. Zerrenda hori oso handia bada, gure programa ez da eraginkorra izango! Hau da, denbora galtzen ibiliko da. Hasieran esan bezala, ordenagailuak oso tentelak dira. Gelditzeko esaten ez badiegu, aurrera jarraituko dute.
 
 Zorionez, begiztetan `break` agindua erabil dezakegu, begizta bat-batean bukatzea lortuko duena:
 
@@ -369,7 +369,8 @@ Sartu izen bat: Ada
 Kaixo Ada
 Sartu izen bat: Neko
 Kaixo Neko
-Sartu izen bat: salir
+Sartu izen bat: irten
+Kaixo irten
 Amaiera.
 ```
 
@@ -443,7 +444,7 @@ Sortu aurrekoaren antzeko programa bat, zenbaki bikoiti eta positiboak bakarrik 
 *-*-*-*
 ```
 
-Adibidez, 4 zenbakia sartzen badute:
+Adibidez, 4 zenbakia sartzen bada:
 
 ```console
 *-*-*
@@ -539,7 +540,7 @@ Sartu zenbaki bat: 4
 Emaitza: 24
 ```
 
-2.6 ariketa
+2.6 Ariketa
 
 Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egiaztatu zenbaki hori primoa den ala ez, hau da, bakarrik bere buruarekin edo 1egatik zatigarria den. Adibidez: 2, 3, 5, 7, 11, 13, 17,...
 
@@ -571,7 +572,7 @@ Emaitza:
 
 ```console
 Sartu zenbaki bat: 5
-5 lehengusua da.
+5  zenbakia lehena da.
 ```
 
 2.7 Ariketa
