--- a/book_eu/04.md
+++ b/book_eu/04.md
@@ -57,7 +57,7 @@ Funtzioek parametroak jaso ditzakete. Horiek aldagai bihurtzen dira funtzioaren 
 Adibidez, norbait agurtzen duen funtzio bat sor dezakegu:
 
 ```python
-def saluda (pertsona):
+def agurtu (pertsona):
   print ("Kaixo", pertsona)
 ```
 
@@ -65,8 +65,8 @@ Funtzioaren barruan, pertsonen balioa desberdina izango da deian ematen zaionare
 Honela erabil liteke:
 
 ```python
-agur("Neko") #pertsona aldagaia  "Neko" izango da
-agur("Ada") #pertsona aldagaia "Ada" izango da
+agurtu("Neko") #pertsona aldagaia  "Neko" izango da
+agurtu("Ada") #pertsona aldagaia "Ada" izango da
 ```
 
 Hona hemen horren emaitza:
@@ -98,7 +98,7 @@ Emaitza:
 Funtzio baten parametroek lehenetsitako balioa izan dezakete. Hau da, balio jakin bat esleitu ahal zaie, eta deian parametro hori pasatzen ez bada, parametroak balio hori lehenetsiko du.
 
 ```python
-def agur(pertsona, aldiz = 3):
+def agurtu(pertsona, aldiz = 3):
   for i in range (aldiz):
     print ("Kaixo", pertsona)
 ```
@@ -168,7 +168,7 @@ def hitzak_batu(*hitza):
     return esaldia
 
 
-print(hitzak_batu("kaixo", "nola", "naiz"))
+print(hitzak_batu("kaixo", "zer", "moduz"))
 ```
 
 Emaitza:
@@ -185,7 +185,7 @@ Horretarako, `return` agindua erabiltzen da, eta horrek datu jakin bat edo datu 
 Adibidez, bi balioren batura kalkulatzen duen funtzio bat:
 
 ```python
-def suma (a, b):
+def batu(a, b):
   emaitza = a + b
   return emaitza
 ```
@@ -193,14 +193,14 @@ def suma (a, b):
 Pixka bat laburtu daiteke zuzenean:
 
 ```python
-def suma (a, b):
+def batu(a, b):
   return a + b
 ```
 
 Honela erabil liteke funtzioa:
 
 ```python
-print(batura(40, 2)) # 42
+print(batu(40, 2)) # 42
 ```
 
 Gauza pare bat hartu behar dituzu kontuan:
@@ -222,16 +222,16 @@ print(zatitu(32, 4))
 Emaitza:
 
 ```console
-8
+8.0
 ```
 
 Beste adibide bat, balio bat hainbat aldiz biderkatzen duen funtzio bat. Kopurua 1 baino txikiagoa bada, 0 bat itzuliko du:
 
 ```python
 def berredura (kopurua, aldiz):
-  if (batzuetan > 0):
+  if (aldiz > 0):
     guztira = 1
-    for i in range (batzuetan):
+    for i in range (aldiz):
       guztira = guztira * kopurua
     return guztira
   else:
@@ -266,7 +266,7 @@ def irakur_zenbakia ():
 Demagun beste funtzio bat ere badugula zenbakiak kentzeko:
 
 ```python
-def kenketa (a, b)
+def kenketa (a, b):
   return a - b
 ```
 
@@ -281,7 +281,7 @@ Zenbaki edo aldagai bat parametro gisa jarri beharrean, dei bat jar diezaiokegu 
 Funtzio horiek `irakur_zenbakia ()` , balio batzuk itzuliko dituzte. Lehenengo `irakur_zenbakia()` deitu bezain laster, honela izango da:
 
 ```python
-print (kenketa(5,irakur_zenbakia ()))
+print (kenketa(5, irakur_zenbakia()))
 ```
 
 Eta gero, bigarrenari `irakur_zenbakia ()` deitu ondoren:
@@ -361,12 +361,12 @@ Programak funtzioetan banatzea programa konplexuagoak diseinatzeko lehen urratsa
 Zure programak zerbait egin behar badu hainbat aldiz, kodea behar beste aldiz errepikatu beharko zenuke. Imajinatu erabiltzailearen hainbat datu jaso behar dituzula, eta hori egiten duzun bakoitzean datua hutsik ez dagoela egiaztatu behar duzula:
 
 ```python
-dato = ""
+datua = ""
 
-while dato  = "":
-  dato = input ("Mesedez, sartu datu bat:")
-  if dato == "":
-  print ("Datua hutsik dago!)
+while datua == "":
+  datua = input("Mesedez, sartu datu bat:")
+  if datua == "":
+    print ("Datua hutsik dago!")
 ```
 
 Erabiltzaileari 3 datu eskatzen badizkiozu, kode hori 3 aldiz errepikatu beharko zenuke! Aldiz, kode bera duen funtzio bat sortzen baduzu, behin bakarrik idatzi beharko duzu, eta gero behar adina aldiz erabili ahal izango duzu.
@@ -435,7 +435,7 @@ def diferentzia (balio1, balio2):
     else:
         kenketa = balio2 - balio1
 
-    print("Diferentzia da: ", kenketa)
+    print("Aldea hau da: ", kenketa)
 
 diferentzia(10, 5)
 diferentzia(4, 12)
@@ -495,7 +495,7 @@ def agurtu(momentua):
     else:
         return ""
 
-print(eskerrik_asko("arratsaldean"))
+print(agurtu("arratsaldean"))
 
 # beste bertsio bat
 def agurtu2(momentua):
@@ -505,7 +505,7 @@ def agurtu2(momentua):
         "gauero": "Gabon"
     }[momentua]
 
-print(eskerrik_asko2("arratsaldean"))
+print(agurtu2("arratsaldean"))
 ```
 
 Emaitza:
@@ -614,7 +614,7 @@ def pasahitzaSortu (luzera):
     pasahitza = ""
 
     for i in range(luzera):
-        hizkia = hizkiak[aleatorio(len(hizkiak))]
+        hizkia = hizkiak[ausazkoa(len(hizkiak))]
         pasahitza = pasahitza + hizkia
 
     return pasahitza
@@ -658,7 +658,7 @@ def faktura(produktuak, kantitateak, prezioak):
 
 
 # Adibidea
-fakturaGuztira = faktura(["Ogi","Arrautza","Hirina"],[1,6,2],[1.2, 0.2, 0.8])
+fakturaGuztira = faktura(["Ogia","Arraultza","Irina"],[1,6,2],[1.2, 0.2, 0.8])
 print(fakturaGuztira)
 ```
 
@@ -668,7 +668,7 @@ Emaitza:
 FAKTURA
 - ------------------
 Ogia x 1: 1.2
-Arrautzak x 6: 0.2
+Arraultzak x 6: 0.2
 Irina x 2: 0.8
 
 - ----------------------
@@ -688,39 +688,41 @@ Azkenean, programak esleitutako puntuen laburpena erakutsi behar du.
 ```python
 import random
 
-def ausazkoa (maximoa):
-    return random.randint(0, maximoa)
+
+def ausazkoa(maximoa):
+  return random.randint(0, maximoa)
+
 
 def atributuakSortu(konpentsaketaMaila):
-    puntuakEman = 0
-    adimena = 0
-    indarra = 0
-    abiadura = 0
+  puntuakEman = 0
+  adimena = 0
+  indarra = 0
+  abiadura = 0
 
-    gainontzekoPuntuak = 20
-    puntuak = 0
+  gainontzekoPuntuak = 20
+  puntuak = 0
 
-    while gainontzekoPuntuak > 0:
-        if nivel_compensación > gainontzekoPuntuak:
-            puntuak = gainontzekoPuntuak
-            gainontzekoPuntuak = 0
-        else:
-            puntuak = aleatorio(konpentsaketaMaila+1)
-            gainontzekoPuntuak = gainontzekoPuntuak - puntuak
+  while gainontzekoPuntuak > 0:
+    if konpentsaketaMaila > gainontzekoPuntuak:
+      puntuak = gainontzekoPuntuak
+      gainontzekoPuntuak = 0
+    else:
+      puntuak = ausazkoa(konpentsaketaMaila + 1)
+      gainontzekoPuntuak = gainontzekoPuntuak - puntuak
 
-        puntuakEman = aleatorio(3)
+    puntuakEman = ausazkoa(3)
 
-        if puntuakEman == 0:
-            adimena = adimena + puntuak
-        elif puntuakEman == 1:
-            indarra = indarra + puntuak
-        elif puntuakEman == 2:
-            abiadura = abiadura + puntuak
+    if puntuakEman == 0:
+      adimena = adimena + puntuak
+    elif puntuakEman == 1:
+      indarra = indarra + puntuak
+    elif puntuakEman == 2:
+      abiadura = abiadura + puntuak
 
-    print("\nBalioak konpentsazioaren arabera adierazita: ", konpentsaketaMaila)
-    print("Adimena: ", adimena)
-    print("Indarra: ", indarra)
-    print("Abiadura: ", abiadura)
+  print("\nBalioak konpentsazioaren arabera adierazita: ", konpentsaketaMaila)
+  print("Adimena: ", adimena)
+  print("Indarra: ", indarra)
+  print("Abiadura: ", abiadura)
 
 
 atributuakSortu(3)
@@ -730,8 +732,8 @@ atributuakSortu(3)
 Emaitza:
 
 ```console
-Konpentsazio bidez esleitutako balioak: 3
-Adimena: 3
-Indarra: 1
-Abiadura: 10
+Balioak konpentsazioaren arabera adierazita:  3
+Adimena:  3
+Indarra:  8
+Abiadura:  5
 ```
