--- a/book_eu/05.md
+++ b/book_eu/05.md
@@ -86,17 +86,17 @@ class Katua:
     self.izena = izena
 
   def miaukatu (self):
-    print("Miau, naiz", self.izena)
+    print("Miau,", self.izena, "naiz.")
 ```
 
 Orain, `Katua` klaseko objektuak sortzen ditugunean, izen bat emango diogu, eta hau `izena` atributuan geratuko da:
 
 ```python
-gato = Katua("Pixi")
-gato.miaukatu()
+katua = Katua("Pixi")
+katua.miaukatu()
 
-Beste katu bat = Katua("Txeto")
-beste katea.miaukatu()
+besteKatua = Katua("Txeto")
+besteKatua.miaukatu()
 ```
 
 Eta kasu honetan ikusiko dugu:
@@ -119,8 +119,8 @@ class Kaixo:
         print(self.agurra)
 
 
-hola = Hola()
-hola.esanKaixo()
+kaixo = Kaixo()
+kaixo.esanKaixo()
 ```
 
 Emaitza:
@@ -136,7 +136,7 @@ Herentzia kodea berrerabiltzeko klaseek duten mekanismo bat da. Demagun katakume
 
 ```python
 class Katakumea (Katua):
-  def purrustatu self):
+  def purrustatu (self):
     print ("Purrrr")
 ```
 
@@ -166,7 +166,7 @@ class Katakumea (Katua):
     super () .__init__ (izena)
     print ("Katakumea sortua")
 
-  def ronea (self):
+  def purrustatu (self):
     print ("Purrrr")
 ```
 
@@ -212,7 +212,7 @@ objektua.AtributuIzena
 Katuak izena izeneko propietate bat du.
 
 ```python
-nireKatua = Katua ("Pixi")
+nireKatua = Katua("Pixi")
 print (nireKatua.izena) #Pixi
 nireKatua.izena = "Pixel"
 nireKatua.miaukatu () #Miau, Pixel naiz
@@ -242,20 +242,20 @@ Klasea honela geratuko litzateke:
 
 ```python
 class Katua:
-  def __init__ (self, izena):
+  def __init__(self, izena):
     self._izena = izena
 
   @property
-  def izena ():
+  def izena(self):
     return self._izena
 
   @izena.setter
-  def izena (izena):
-    if izena! = "":
+  def izena(self, izena):
+    if izena != "":
       self._izena = izena
 
-  def miaukatu (self):
-    print ("Miau, ni naiz ", self.izena)
+  def miaukatu(self):
+    print("Miau, ni naiz ", self.izena)
 ```
 
 Ikus ezazu propietatea `izena` dela orain. Jabetza hori  "pribatua" dela adierazteko modu bat da, eta ez litzatekeela klasetik kanpo eskuratu behar.
@@ -296,7 +296,7 @@ class Kotxea(Ibilgailua):
         self._kolorea = kolorea
 
     def info (self):
-        return f"{self.matrikula} {self._modeloa} {self._kolorea}";
+        return f"{self.matrikula} {self._modeloa} {self._kolorea}"
 
 
 kotxea = Kotxea("0042ASI", "Opel Corsa", "Zuria")
@@ -328,26 +328,34 @@ Klaseek, beraz, beste mota batzuetako propietateak edo beste klase batzuetako ze
 ```python
 class Ikaslea:
   def __init__ (self, izena):
-    self._izena = izena
+    self.izena = izena
 
 class Gela:
   def __init__ (self):
-    self._ikaleak = []
+    self._ikasleak = []
 
   def sartuIkaslea (self, ikaslea):
-    self._ikaleak.append (ikaslea)
+    self._ikasleak.append (ikaslea)
 
   def listaPasa (self):
     for ikaslea in self._ikasleak:
       print (ikaslea.izena)
 
-alumno1 = Ikaslea ("Gumball")
-alumno2 = Ikaslea ("Darwin")
+
+ikasle1 = Ikaslea ("Gumball")
+ikasle2 = Ikaslea ("Darwin")
 
 gela = Gela ()
-gela.sartuIkaslea("Kepa")
-gela.sartuIkaslea("Amets")
+gela.sartuIkaslea(ikasle1)
+gela.sartuIkaslea(ikasle2)
 gela.listaPasa()
+```
+
+Emaitza:
+
+```console
+Gumball
+Darwin
 ```
 
 Diseinuak behar bezain konplexuak izan daitezke behar duguna irudikatzeko.
@@ -420,9 +428,9 @@ Adibidez, izen bat emanda, formatu zuzena ematen dion klase bat egin dezakegu, l
 class Formatua:
   @staticmethod
   def zuzendu (izena):
-  return izena [0] .upper () + izena [1:] .lower ()
+    return izena [0] .upper () + izena [1:] .lower ()
 
-  print (Formatua.zuzendu("gUmBaLl"))
+print (Formatua.zuzendu("gUmBaLl"))
 ```
 
 Emaitza:
@@ -476,7 +484,7 @@ class Instrumentua:
         print("Jotzen ", self._izena, "jotzen")
 
     def info (self):
-        return f"${self._izena} ${self._mota}"
+        return f"{self._izena} {self._mota}"
 
 
 nireGitarra = Instrumentua("Gitarra", "klasikoa")
@@ -496,24 +504,24 @@ Idatz ezazu programa bat, `IzenZuzena` izeneko klase bat definituko duena, eta, 
 
 ```python
 class IzenZuzena:
-    def __init__(self, izena, abizena):
-        self._izena = izena
-        self._abizena = abizena
+  def __init__(self, izena, abizena):
+    self._izena = izena
+    self._abizena = abizena
 
-    def zuzendu (self):
-        return self._zuzendu(self._izena) + " " + self._zuzendu(self._abizena)
-
-
-    def _zuzendu (self, hizkiak):
-        return self._lehenengo(hizkiak) + self._gainera(hizkiak)
+  def zuzendu (self):
+    return self._zuzendu(self._izena) + " " + self._zuzendu(self._abizena)
 
 
-    def _lehenengo (self, hizkiak):
-        return hizkiak[0].lower()
+  def _zuzendu (self, hizkiak):
+    return self._lehenengo(hizkiak) + self._gainera(hizkiak)
 
 
-    def _gainera (self, hizkiak):
-        return hizkiak[1:len(hizkiak)].lower()
+  def _lehenengo (self, hizkiak):
+    return hizkiak[0].upper()
+
+
+  def _gainera (self, hizkiak):
+    return hizkiak[1:len(hizkiak)].lower()
 
 
 zuzentzailea = IzenZuzena("JUAN", "PÉREZ")
@@ -719,7 +727,7 @@ jokalaria2 = Jokalaria("Beckenbauer", "Defentsa", 4)
 
 print(jokalaria1.txosten())
 
-ekipoa = Kepa("New Team", 1983, 39944.45)
+ekipoa = Taldea("New Team", 1983, 39944.45)
 ekipoa.jokalariaFitxatu(jokalaria1)
 ekipoa.jokalariaFitxatu(jokalaria2)
 
